--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <header>
         <h1 class="titulo">
-            Segunda Tarea de Desarollo Web
+            Segunda Tarea de Desarollo Web 
         </h1>
+        <h2 class="titulo">
+            Escalab Academy
+        </h2>
     </header>
     <nav>
         <ul class="navegacion">
